# observer

./: CMakeLists.txt  action-config-dialog.cpp  action-config-dialog.hpp  action-config-dialog.ui  action-config.cpp  action-config.hpp  action-delegate-editor.cpp  action-delegate-editor.hpp  action-delegate-editor.ui  index-aware-delegate.hpp  observer-settings.cpp  observer-settings.hpp  observer-settings.ui  observer.cpp  observer.hpp  settings-model.cpp  settings-model.hpp  ws-chat-client.cpp  ws-chat-client.hpp
data/locale/: en-US.ini  ru-RU.ini
delegates/: action-delegate.cpp  action-delegate.hpp  button-delegate.cpp  button-delegate.hpp  buttons-delegate.cpp  buttons-delegate.hpp  multiline-delegate.cpp  multiline-delegate.hpp  spinbox-delegate.cpp  spinbox-delegate.hpp
